--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,4 +1,4 @@
-.hero-btn {
+.hero__btn {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -15,13 +15,12 @@
   display: block;
   border: none;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus,
+  &:hover {
+    background: #188ce8;
+  }
 }
-.hero-btn:focus,
-.hero-btn:hover {
-  background: #188ce8;
-}
-
-.subscribe-btn {
+.subscribe__btn {
   width: 200px;
   height: 50px;
   background: #2196f3;
@@ -38,7 +37,7 @@
   border: none;
 }
 
-.work-button {
+.work__button {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
@@ -50,12 +49,11 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.work-button:focus,
-.work-button:hover {
-  color: white;
-  background-color: var(--accent);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:focus,
+  &:hover {
+    color: white;
+    background-color: var(--accent);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
