--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,5 +1,5 @@
 // HEADER
-.header-contact {
+.header-list-contact__link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -10,50 +10,54 @@
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:hover {
+    color: var(--accent);
+  }
 }
-.header-item:not(:last-child) {
-  margin-right: 50px;
-}
+
 .header-list-contact {
   display: flex;
   margin-left: auto;
   align-items: center;
 }
 .header-link:hover,
-.header-link:focus,
-.header-contact:hover,
-.header-contact:hover {
+.header-link:focus {
   color: var(--accent);
 }
-.mail-icon {
+.header-list-contact__icon {
   box-sizing: border-box;
   fill: currentColor;
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    fill: var(--accent);
+  }
 }
-.mail-icon:hover,
-.mail-icon:focus {
-  fill: var(--accent);
-}
-.header-item {
+
+.header-list-contact__item {
   display: flex;
+  &:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 // FOOTER
-.footer-address {
+.footer__address {
   margin-top: 20px;
 }
-.footer-item:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer-contact-address {
+.footer__contact-address {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-.footer-contact {
+.footer__contact {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -61,8 +65,8 @@
   color: rgba(255, 255, 255, 0.6);
   margin-bottom: 9px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-contact:hover,
-.footer-contact:focus {
-  color: var(--accent);
+  &:hover,
+  &:focus {
+    color: var(--accent);
+  }
 }
