--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -14,7 +14,7 @@
   letter-spacing: 0.03em;
   color: var(--main-color);
 }
-.footer-logo-studio {
+.footer__logo-studio {
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
