--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,10 +8,6 @@
     visibility 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden .modal {
-  transform: scale(0.5);
-}
-
 .modal {
   padding: 40px;
   position: absolute;
@@ -25,9 +21,12 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: translate 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  .backdrop.is-hidden & {
+    transform: scale(0.5);
+  }
 }
 
-.modal-close {
+.modal__close {
   background: #ffffff;
   width: 30px;
   height: 30px;
@@ -41,17 +40,16 @@
   position: absolute;
   top: 8px;
   right: 8px;
+  &:hover,
+  &:focus {
+    color: var(--accent);
+  }
 }
-.modal-close-btn {
+.modal__close-btn {
   fill: currentColor;
 }
 
-.modal-close:hover,
-.modal-close:focus {
-  color: var(--accent);
-}
-
-.modal-title {
+.modal__title {
   font-weight: bold;
   font-size: 20px;
   line-height: 1.15;
@@ -60,7 +58,7 @@
   color: #212121;
   margin-bottom: 12px;
 }
-.modal-label {
+.modal__label {
   display: flex;
   font-weight: normal;
   font-size: 12px;
@@ -70,7 +68,7 @@
   margin-bottom: 4px;
   margin-top: 10px;
 }
-.modal-input {
+.modal__input {
   width: 448px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -80,30 +78,14 @@
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 14px;
   outline: none;
+  &:hover,
+  &:focus {
+    border: 1px solid #2196f3;
+    outline: none;
+  }
 }
 
-.modal-input:hover,
-.modal-textarea:hover,
-.modal-input:focus,
-.modal-textarea:focus {
-  border: 1px solid #2196f3;
-  outline: none;
-}
-.modal-input:hover + .modal-item,
-.modal-input:focus + .modal-item {
-  fill: #2196f3;
-}
-
-.modal-textarea::placeholder {
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-.modal-textarea:hover::placeholder {
-  color: #188ce8;
-}
-.modal-textarea {
+.modal__textarea {
   width: 448px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -114,8 +96,23 @@
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 14px;
   outline: none;
+  &:hover,
+  &:focus {
+    border: 1px solid #2196f3;
+    outline: none;
+  }
+
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+  &:hover::placeholder {
+    color: #188ce8;
+  }
 }
-.modal-checkbox {
+.modal__checkbox {
   margin-top: 20px;
   height: 24px;
   font-size: 14px;
@@ -126,29 +123,28 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-}
-.modal-checkbox > a {
-  margin-left: 5px;
-  color: var(--accent);
+  & > a {
+    margin-left: 5px;
+    color: var(--accent);
+  }
+  &::before {
+    content: "";
+    width: 16px;
+    height: 15px;
+    border: 2px solid #212121;
+    margin-right: 8px;
+    cursor: pointer;
+  }
+  .modal__checkbox-check:checked + &::before {
+    border: none;
+    background-image: url(../images/icon-check.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
 }
 
-.modal-checkbox::before {
-  content: "";
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  margin-right: 8px;
-  cursor: pointer;
-}
-.checkbox-check:checked + .modal-checkbox::before {
-  border: none;
-  background-image: url(../images/icon-check.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.modal-btn {
+.modal__btn {
   margin-left: 125px;
   margin-top: 40px;
   width: 200px;
@@ -164,21 +160,25 @@
   letter-spacing: 0.06em;
   color: #ffffff;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-btn:hover,
-.modal-btn:focus {
-  background: #188ce8;
+  &:hover,
+  &:focus {
+    background: #188ce8;
+  }
 }
 
-.input-wrap {
+.modal__input-wrap {
   position: relative;
 }
-.modal-item {
+.modal__item {
   position: absolute;
   left: 14px;
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .modal__input:hover + &,
+  .modal__input:focus + & {
+    fill: #2196f3;
+  }
 }
 .is-hidden {
   opacity: 0;
