--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,13 +1,13 @@
 .header-list {
   display: flex;
 }
-.header-item:not(:last-child) {
+.header-list__item:not(:last-child) {
   margin-right: 50px;
 }
-.header-item:first-child {
+.header-list__item:first-child {
   margin-left: 93px;
 }
-.header-link {
+.header-list__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
