--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,14 +1,11 @@
 .about {
   padding-bottom: 94px;
 }
-.about-list {
+.about__list {
   display: flex;
 }
 
-.about-item:not(:last-child) {
-  margin-right: 30px;
-}
-.about-title {
+.about__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -17,11 +14,14 @@
   margin-bottom: 50px;
   text-align: center;
 }
-.about-item {
+.about__item {
   position: relative;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
-.about-text {
+.about__text {
   position: absolute;
   left: 0;
   bottom: 0;
