--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -2,16 +2,16 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.advantages-icon {
+.advantages__icon-wrap {
   padding: 25px 100px;
   margin-bottom: 30px;
   background: #f5f4fa;
   border-radius: 4px;
 }
-.advantages-list {
+.advantages__list {
   display: flex;
 }
-.advantages-title {
+.advantages__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -20,11 +20,11 @@
   color: var(--main-color);
   margin-bottom: 10px;
 }
-.advantages-item:not(:last-child) {
+.advantages__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.advantages-post-title {
+.advantages__post-title {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
