--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -2,7 +2,7 @@
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.clients-title {
+.clients__title {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16;
@@ -10,10 +10,10 @@
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
-.clienst-list {
+.clienst__list {
   display: flex;
 }
-.clienst-list-link {
+.clienst__list-link {
   width: 170px;
   height: 92px;
   display: flex;
@@ -25,14 +25,15 @@
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+    border: 1px solid #2196f3;
+    fill: var(--accent);
+  }
 }
-.clienst-list-item:not(:last-child) {
-  margin-right: 30px;
-}
-.clienst-list-item {
+
+.clienst__list-item {
   fill: currentColor;
-}
-.clienst-list-link:hover {
-  border: 1px solid #2196f3;
-  fill: var(--accent);
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
