--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,14 +2,14 @@
   background-color: #2f303a;
   padding-bottom: 60px;
 }
-.footer-container {
+.footer__container {
   display: flex;
 }
-.footer-contact-block {
+.footer__contact-block {
   margin-right: 70px;
   padding-top: 60px;
 }
-.footer-social-block {
+.footer__social-block {
   padding-top: 72px;
   margin-right: 93px;
 }
