--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -13,7 +13,7 @@
   max-width: 1600px;
   margin: 0 auto;
 }
-.hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
