--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,4 +1,4 @@
-.portfolio-item {
+.portfolio__item {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
   width: calc(100% / 3 - 30px);
@@ -7,16 +7,19 @@
   cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
+  &:focus,
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
-.portfolio-item:hover .portfolio-text-hiden {
-  transform: translateY(0);
-}
-.portfolio-wrap {
+
+.portfolio__wrap {
   position: relative;
   overflow: hidden;
 }
 
-.portfolio-text-hiden {
+.portfolio__text-hiden {
   position: absolute;
   left: 0;
   top: 0;
@@ -30,9 +33,12 @@
   padding: 63px 24px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .portfolio__item:hover & {
+    transform: translateY(0);
+  }
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
@@ -40,16 +46,10 @@
   padding-bottom: 94px;
 }
 
-.portfolio-item:focus,
-.portfolio-item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-list img {
+.portfolio__list img {
   margin-bottom: 20px;
 }
-.portfolio-title {
+.portfolio__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -59,7 +59,7 @@
   padding-left: 24px;
   padding-right: 24px;
 }
-.portfolio-text {
+.portfolio__text {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
