--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,23 +3,24 @@
   padding-bottom: 94px;
   background-color: #f5f4fa;
 }
-.team-list {
+.team__list {
   display: flex;
 }
-.team-item {
+.team__item {
   background-color: white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   padding-bottom: 30px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.team-item:not(:last-child) {
-  margin-right: 30px;
-}
-.team-item img {
+
+.team__item img {
   margin-bottom: 30px;
 }
-.team-title {
+.team__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -28,7 +29,7 @@
   text-align: center;
   margin-bottom: 50px;
 }
-.team-name {
+.team__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -37,7 +38,7 @@
   margin-bottom: 10px;
   text-align: center;
 }
-.team-post-name {
+.team__post-name {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
@@ -45,11 +46,11 @@
   text-align: center;
   margin-bottom: 16px;
 }
-.social-icon {
+.team__social-icon {
   display: flex;
   justify-content: center;
 }
-.social-icon-link {
+.team__social-icon-link {
   width: 44px;
   height: 44px;
   display: flex;
@@ -60,15 +61,15 @@
   border-radius: 50%;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover {
+    background-color: var(--accent);
+    color: #ffffff;
+  }
 }
-.social-icon-list:not(:last-child) {
+.team__social-icon-list:not(:last-child) {
   margin-right: 10px;
 }
 
-.social-icon-item {
+.team__social-icon-item {
   fill: currentColor;
-}
-.social-icon-link:hover {
-  background-color: var(--accent);
-  color: #ffffff;
 }
