--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,6 @@
 @import "./layout/clients";
 @import "./layout/footer";
 @import "./layout/work";
-@import "./layout/portgolio";
+@import "./layout/portfolio";
 @import "./layout/header";
 @import "./layout/header";
